[package]
name = "sam3-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
ndarray = "0.16"
ort = "2.0.0-rc.10"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform-specific ORT features
[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["directml", "download-binaries"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["coreml", "download-binaries"] }
